[project]
name = "MusescoreDL"
version = "0.0.1"
authors = [
    { name="Doozy" }
]
description = "Musescore sheet music downloader"
readme = "README.md"
requires-python = ">= 3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "selenium",
    "typer >= 0.12.3",
    "requests",
    "tqdm",
    "svglib",
    "reportlab",
    "pypdf"
]

[project.scripts]
msdl = "MusescoreDL.cli:app"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://github.com/d00zylive/MusescoreDL"
Repository = "https://github.com/d00zylive/MusescoreDL.git"
Issues = "https://github.com/d00zylive/MusescoreDL/issues"